metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/Customer_Onboarding_Form__c.object-meta.xml
<CustomObject>
    <description>BODEV-1323: Custom object for customer billing onboarding form. Designed with a record type so that the usage could be expanded to other onboarding form (e.g., implementation).</description>
    <label>Customer Onboarding Form</label>
    <nameField>
        <displayFormat>COF-{000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboarding Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>