metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Account_Payable_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Payable_Email__c</fullName>
    <label>Account Payable Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>