metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Actual_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Actual_Form_URL__c</fullName>
    <description>In this field the actual form URL will be populated, the purpose is to check the URL parameters and whether fields are populated properly of not</description>
    <label>Actual Form URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>