metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Bill_to_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_Email__c</fullName>
    <label>Bill to Contact Email</label>
    <type>Email</type>
</CustomField>