metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Bill_to_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_First_Name__c</fullName>
    <label>Bill to Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>