metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Billing_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_CC_Email__c</fullName>
    <label>Billing CC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>