metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>