metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>