metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Billing_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone_Number__c</fullName>
    <label>Billing Phone Number</label>
    <type>Phone</type>
</CustomField>