metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>