metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Certification_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Certification_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to capture submitter&apos;s consent/declaration on submitted information. Actual clause should be specified in each form presented to customer.</description>
    <label>Certification Declaration</label>
    <type>Checkbox</type>
</CustomField>