metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Customer_Onboarding_Form_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding_Form_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Onboarding Form ID (18 digits)</label>
    <type>Text</type>
</CustomField>