metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Filled_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Form_Filled_By_Email__c</fullName>
    <description>Email of the person who filled the form.</description>
    <label>Form Filled By Email</label>
    <type>Email</type>
</CustomField>