metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Filled_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Filled_By_Name__c</fullName>
    <description>Name of the person who filled the form.</description>
    <label>Form Filled By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>