metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Last_Reflected_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Form_Last_Reflected_Timestamp__c</fullName>
    <description>BODEV-1487: Timestamp on which the form information was last reflected to associated Account and/or other objects.</description>
    <inlineHelpText>Timestamp on which the form information was last reflected to associated Account and/or other objects.</inlineHelpText>
    <label>Form Last Reflected Timestamp</label>
    <type>DateTime</type>
</CustomField>