metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Sent_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_CC_Email__c</fullName>
    <description>List of emails to which the Form email is CCed.</description>
    <label>Form Sent CC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>