metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Sent_Email__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_Email__c</fullName>
    <description>Email address to which the From is sent.</description>
    <label>Form Sent Email</label>
    <type>Email</type>
</CustomField>