metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Sent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_Timestamp__c</fullName>
    <description>Timestamp when the Form email was sent.</description>
    <label>Form Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>