metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted_Timestamp__c</fullName>
    <description>Timestamp when SF fields are filled by integration. Populated by the integration.</description>
    <label>Form Submitted Timestamp</label>
    <type>DateTime</type>
</CustomField>