metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <description>URL of the original form from which the data was submitted.</description>
    <label>Form URL</label>
    <type>Url</type>
</CustomField>