metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Method__c</fullName>
    <label>Invoice Delivery Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>