metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Length_VAT_number__c.field-meta.xml
<CustomField>
    <fullName>Length_VAT_number__c</fullName>
    <description>Indicates whether the submitted value is within the characters limit so it can be synced to NetSuite</description>
    <formula>IF(
ISBLANK( VAT_Number__c ) || ISBLANK( Account__r.VAT_number__c ), &quot;&quot;,
IF(
LEN (VAT_Number__c) &lt;= 20,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length? - VAT number</label>
    <type>Text</type>
</CustomField>