metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_Account_Payable_Email__c.field-meta.xml
<CustomField>
    <fullName>Match_Account_Payable_Email__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
ISBLANK( Account_Payable_Email__c  ) || ISBLANK( Account__r.Credit_Control_Reminder_Email__c ), &quot;&quot;,
IF(
Account_Payable_Email__c = Account__r.Credit_Control_Reminder_Email__c,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + Account__r.Credit_Control_Reminder_Email__c
)
)</formula>
    <label>Match? - Account Payable Email</label>
    <type>Text</type>
</CustomField>