metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Account_Name__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
  ISBLANK( Billing_Account_Name__c ) || ISBLANK( Account__r.Billing_Account_Name__c ), &quot;&quot;,
  IF(
    Billing_Account_Name__c = Account__r.Billing_Account_Name__c,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + Account__r.Billing_Account_Name__c
  )
)</formula>
    <label>Match? - Billing Account Name</label>
    <type>Text</type>
</CustomField>