metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Match_Billing_Zip_Postal_Code__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
  ISBLANK( Billing_Zip_Postal_Code__c ) || ISBLANK( Account__r.BillingPostalCode ), &quot;&quot;,
  IF(
    Billing_Zip_Postal_Code__c = Account__r.BillingPostalCode,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + Account__r.BillingPostalCode
  )
)</formula>
    <label>Match? - Billing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>