metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Invoice_Delivery_Method__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
  ISBLANK( Invoice_Delivery_Method__c ) || ISBLANK( TEXT(Account__r.Invoice_Delivery_Method__c) ), &quot;&quot;,
  IF(
    Invoice_Delivery_Method__c = TEXT(Account__r.Invoice_Delivery_Method__c),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + TEXT(Account__r.Invoice_Delivery_Method__c)
  )
)</formula>
    <label>Match? - Invoice Delivery Method</label>
    <type>Text</type>
</CustomField>