metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_PO_Needed__c.field-meta.xml
<CustomField>
    <fullName>Match_PO_Needed__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
  ISBLANK( TEXT(PO_Needed__c) ) || ISBLANK( TEXT(Account__r.PO_Needed__c) ), &quot;&quot;,
  IF(
    TEXT(PO_Needed__c) = TEXT(Account__r.PO_Needed__c),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + TEXT(Account__r.PO_Needed__c)
  )
)</formula>
    <label>Match? - PO Needed?</label>
    <type>Text</type>
</CustomField>