metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_PO_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Match_PO_Requester_Email__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
ISBLANK( PO_Requester_Email__c   ) || ISBLANK(  Account__r.PO_Requestor__c  ), &quot;&quot;,
IF(
PO_Requester_Email__c = Account__r.PO_Requestor__c,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + Account__r.PO_Requestor__c
)
)</formula>
    <label>Match? - PO Requester Email</label>
    <type>Text</type>
</CustomField>