metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_Split_One_off_Subscr_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Match_Split_One_off_Subscr_Invoice__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
  ISBLANK( Form_Submitted_Timestamp__c ), &quot;&quot;,
  IF(
    Split_One_off_Subscription_Invoice__c = Opportunity__r.Split_one_off_subscription_invoice__c,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + IF(Opportunity__r.Split_one_off_subscription_invoice__c, &quot;Yes&quot;, &quot;No&quot;)
  )
)</formula>
    <label>Match? - Split One-off/Subscr. Invoice</label>
    <type>Text</type>
</CustomField>