metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_Taxable_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Taxable_Status__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.
Avalara_Taxable_Status__c field on account is removed.</description>
    <formula>IF(
  ISBLANK( TEXT(Taxable_Status__c)), 
  
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; 
  
)</formula>
    <label>Match? - Taxable Status(Dep)</label>
    <type>Text</type>
</CustomField>