metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Match_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Match_VAT_Number__c</fullName>
    <description>Indicates whether the submitted value matches the current value on Account/Opportunity.</description>
    <formula>IF(
  ISBLANK( VAT_Number__c ) || ISBLANK( Account__r.VAT_number__c ), &quot;&quot;,
  IF(
    VAT_Number__c = Account__r.VAT_number__c,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) + &quot; &quot; + Account__r.VAT_number__c
  )
)</formula>
    <label>Match? - VAT Number</label>
    <type>Text</type>
</CustomField>