metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to concerned Opportunity. In case of future expansion of use case such that reference to Opp might not be mandatory, this field is created as Lookup field, not Master-Detail.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Onboarding Forms</relationshipLabel>
    <relationshipName>Customer_Onboarding_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>