metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/PO_Needed__c.field-meta.xml
<CustomField>
    <fullName>PO_Needed__c</fullName>
    <label>PO Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>