metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/PO_Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>PO_Request_Detail__c</fullName>
    <label>PO Request Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>