metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/PO_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>PO_Requester_Email__c</fullName>
    <label>PO Requester Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>