metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/PO_Requester_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Requester_Last_Name__c</fullName>
    <label>PO Requester Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>