metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Proof_of_Comapny_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Comapny_Registration_Link__c</fullName>
    <description>Link to company registration document stored in Google Drive submitted via the Onboarding Form.</description>
    <label>Proof of Comapny Registration Link</label>
    <type>Url</type>
</CustomField>