metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Sent_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Sent_Email_Body__c</fullName>
    <description>Rich text area to store the email body sent.</description>
    <label>Sent Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>