metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Split_One_off_Subscription_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Split_One_off_Subscription_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split One-off/Subscription Invoice?</label>
    <type>Checkbox</type>
</CustomField>