metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form Created</fullName>
            </value>
            <value>
                <fullName>Form Sent</fullName>
            </value>
            <value>
                <fullName>Form Submitted</fullName>
            </value>
            <value>
                <fullName>Form Synced</fullName>
            </value>
            <value>
                <fullName>Form Declined</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>