metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Status_Note__c.field-meta.xml
<CustomField>
    <fullName>Status_Note__c</fullName>
    <description>BODEV-1487: Text field to put system error description such as &quot;Email not sent as Email address not set in Primary Contact&quot;.</description>
    <label>Status Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>