metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/fields/Taxable_Status__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Status__c</fullName>
    <label>Taxable Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Taxable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>