metadata/force-app/main/default/objects/Customer_Onboarding_Form__c/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <description>Form to collect financial info for billing</description>
    <label>Billing</label>
</RecordType>